--- a/.gitmodules
+++ b/.gitmodules
@@ -19,3 +19,31 @@
 [submodule "bundle/vimroom"]
 	path = bundle/vimroom
 	url = https://github.com/mikewest/vimroom.git
+[submodule "bundle/easytags"]
+    path = bundle/easytags.vim
+    url = https://github.com/xolox/vim-easytags.git
+[submodule "bundle/indentLine"]
+    path = bundle/indentLine
+    url = https://github.com/Yggdroot/indentLine.git
+[submodule "bundle/nerdtree"]
+    path = bundle/nerdtree
+    url = https://github.com/scrooloose/nerdtree.git
+[submodule "bundle/surround.vim"]
+    path = bundle/surround.vim
+    url = https://github.com/tpope/vim-surround.git
+[submodule "bundle/vim-airline"]
+    path = bundle/vim-airline
+    url = https://github.com/vim-airline/vim-airline.git
+[submodule "bundle/vim-airline-themes"]
+    path = bundle/vim-airline-themes
+    url = https://github.com/vim-airline/vim-airline-themes.git
+[submodule "bundle/autotag.vim"]
+    path = bundle/vim-autotag
+    url = https://github.com/craigemery/vim-autotag.git
+[submodule "bundle/fugitive.vim"]
+    path = bundle/vim-fugitive
+    url = https://github.com/tpope/vim-fugitive.git
+[submodule "bundle/vim-misc"]
+    path = bundle/vim-misc
+    url = https://github.com/xolox/vim-misc.git
+
